compose/producer1.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: producer1 
  namespace: default
  labels:
    name: cardano-node
  annotations:
    prometheus.io/port: "12798"
    prometheus.io/scrape: "true"

spec:
  serviceName: cardano-producer1-service
  # Control the number of relays here
  replicas: 1
  selector: 
    matchLabels:
      node_role: producer1
  template:
    metadata:
      labels:
        node_role: producer1
    spec:
      containers:
        - name: cardano-producer1
          # Arm version of nessusio 
          image: nessusio/cardano-node:dev
          ports:
            - containerPort: 12798
            - containerPort: 3001
          # Mount the data volume at /data
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
            - name: keys
              mountPath: /keys
              readOnly: true
          args: ["run",
                "--config", "/config/testnet-config.json",
                "--topology", "/config/testnet-topology_producer1.json",
                "--database-path", "/data/db",
                "--socket-path", "/data/node.socket",
                "--port", "3001",
                "--host-addr", "0.0.0.0",
                "--shelley-kes-key", "/keys/kes.skey",
                "--shelley-vrf-key", "/keys/vrf.skey",
                "--shelley-operational-certificate", "/keys/node.cert"]
      volumes:
        - name: config
          configMap:
            name: config
        - name: keys
          secret:
            secretName: nodekeys 
            defaultMode: 0400
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        # This storageClassName is used on the previously defined volume that
        # provides storage on the host machine
        storageClassName: local-storage-producer1
        resources:
          requests:
            storage: 20Gi
