compose/relay2.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: relay2
  namespace: default
  annotations:
    prometheus.io/port: "12798"
    prometheus.io/scrape: "true"
  labels:
    name: cardano-node

spec:
  serviceName: cardano-node-relay2
  replicas: 1
  selector:
    matchLabels:
      node_role: relay2
  template:
    metadata:
      labels:
        node_role: relay2
    spec:
      containers:
        - name: cardano-node-relay2
          image: nessusio/cardano-node:dev
          ports:
            - containerPort: 12798
            - containerPort: 3001
          # Mount the data volume at /data
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
          args: ["run",
                "--config", "/config/testnet-config.json",
                "--topology", "/config/testnet-topology_relay2.json",
                "--database-path", "/data/db",
                "--socket-path", "/data/node.socket",
                "--port", "3001",
                "--host-addr", "0.0.0.0"]
      volumes:
        - name: config
          configMap:
            name: config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        # This storageClassName is used on the previously defined volume that
        # provides storage on the host machine
        storageClassName: local-storage-relay2
        resources:
          requests:
            storage: 20Gi
