compose/grafana-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
spec:
  type: NodePort 
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - port: 3000 
      nodePort: 20000
