compose/nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: cardano-relay-service
spec:
  type: NodePort
  selector:
    name: cardano-node
  ports:
    - port: 3001
      nodePort: 3001
      targetPort: 3001
