compose/prometheus-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus 
  ports:
    - port: 9090
      nodePort: 443
